<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainHitungEnergi" >

    <TextView
        android:id="@+id/txtLintasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/txtLintasan"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/edtLintasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLintasan"
        android:layout_alignBottom="@+id/txtLintasan"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/btnHitung"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="10dp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtLebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMassa"
        android:layout_below="@+id/txtMassa"
        android:layout_marginTop="54dp"
        android:text="@string/txtLebar" />

    <TextView
        android:id="@+id/txtMassa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLintasan"
        android:layout_below="@+id/edtLintasan"
        android:layout_marginTop="40dp"
        android:text="@string/txtMassa" />

    <EditText
        android:id="@+id/edtMassa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtMassa"
        android:layout_alignBottom="@+id/txtMassa"
        android:layout_alignLeft="@+id/edtLintasan"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edtLebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLebar"
        android:layout_alignBottom="@+id/txtLebar"
        android:layout_alignLeft="@+id/edtMassa"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnHitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtHasil"
        android:layout_alignBottom="@+id/txtHasil"
        android:layout_alignLeft="@+id/txtLebar"
        android:text="@string/btnHitung1" />

    <TextView
        android:id="@+id/txtHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtLebar"
        android:layout_centerVertical="true"
        android:text="@string/txtHasil" />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:src="@drawable/go"
        android:background="#00000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>